update base64